<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/devslopesbanner"
            android:id="@+id/banner"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop" app:layout_constraintHorizontal_bias="0.0"
            android:contentDescription="@string/banner"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/devslopesprofilelogo"
            android:id="@+id/logo"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:layout_marginTop="120dp" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/logo"/>
    <TextView
            android:text="@string/devslopes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/devSlopTextView" android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@+id/logo"
            app:layout_constraintTop_toBottomOf="@+id/banner"
            android:layout_marginStart="24dp" android:textSize="24sp"/>
    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp" app:srcCompat="@drawable/camerabutton"
            android:id="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4" android:contentDescription="@string/camera"/>
    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp" app:srcCompat="@drawable/favoritebutton"
            android:id="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintHorizontal_chainStyle="packed" android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp" app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5" android:contentDescription="@string/favorite"/>
    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp" app:srcCompat="@drawable/inboxbutton"
            android:id="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/logo"
            android:contentDescription="@string/achirve"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline4"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.5"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/dataimage"
            android:id="@+id/imageView6"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" app:layout_constraintDimensionRatio="1:1"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/imageView8"
            android:layout_marginTop="32dp" android:contentDescription="@string/dataimage"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/imagesimage"
            android:id="@+id/imageView7"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            app:layout_constraintDimensionRatio="1:1" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="@+id/guideline4" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView9" android:contentDescription="@string/coderimage"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/videosimage"
            android:id="@+id/imageView8"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/imageView6" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintDimensionRatio="1:1"
            android:layout_marginTop="16dp" android:contentDescription="@string/photoimage"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/codeimage"
            android:id="@+id/imageView9"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="@+id/guideline4" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1" android:layout_marginTop="16dp"
            android:contentDescription="@string/codeimage"
            app:layout_constraintEnd_toEndOf="@+id/imageView7"/>
</android.support.constraint.ConstraintLayout>